fixed hero image on mobile to be smaller so CTA is above fold

--- a/src/scss/_user.scss
+++ b/src/scss/_user.scss
@@ -78,3 +78,10 @@
     color: #FF288F;
   }
 }
+
+// IMAGES
+.hero-image-mobile {
+  width: 80%;
+  display: block;
+  margin: 0 auto;
+}
